<?xml version="1.0"?>
<package>
  <name>vio</name>
  <version>0.1.0</version>
  <description>
    Monocular Visual Odometry
  </description>
  <author>Majid Geravand</author>
  <maintainer email="majidgeravand@gfuse.it">Gfuse</maintainer>
  <license>GPLv3</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cmake_modules</build_depend> <!-- for FindEigen.cmake -->
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>getOdom</run_depend>
  <run_depend>start</run_depend>
  <run_depend>stop</run_depend>
</package>